apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - home.apps.bubudog.net
      secretName: homepage-tls

  rules:
    - host: home.apps.bubudog.net

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: homepage
                port:
                  number: 3000
